--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -18,9 +18,10 @@ jobs:
       - name: Pull rashik1144/core-test-results repository
         run: |
           git config pull.rebase false
-          #git remote set-url origin git@github.com:rashik1144/core-test-results.git
+          git remote remove origin
+          git remote set-url origin git@github.com:rashik1144/core-test-results.git
           git pull origin master
-        working-directory: C:\Users\rashi\core-test-results\
+        working-directory: C:\Users\rashi\core-test-results
         
       - name: Get latest release version
         id: get-latest-release
