--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -1342,6 +1342,10 @@ edit.ema.page.executing.workflow.action=Executing workflow action...
 edit.ema.page.error.executing.workflow.action=Unable to execute workflow action
 edit.ema.page.no.workflow.action=No Workflow Actions
 edit.ema.empty.palette=No contentlets available
+edit.ema.page.unlock=Page Unlock
+edit.ema.page.is.being.unlocked=Page is being unlocked
+edit.ema.page.unlock.success=Page is unlocked
+edit.ema.page.unlock.error=Page could not be unlocked
 editpage.action.cancel=Cancel
 editpage.action.delete=Delete
 editpage.action.save=Save
