--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -18,9 +18,8 @@ jobs:
       - name: Pull rashik1144/core-test-results repository
         run: |
           git config pull.rebase false
-          git remote remove origin
-          git remote set-url origin git@github.com:rashik1144/core-test-results.git
-          git clone origin master
+          git remote add origin https://github.com/rashik1144/core-test-results.git
+          git pull origin master
         working-directory: C:\Users\rashi\core-test-results
         
       - name: Get latest release version
