--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -25,11 +25,12 @@ jobs:
       - name: Get latest release version
         id: get-latest-release
         run: |
-          releases=$(curl -s "https://api.github.com/repos/rashik1144/test-copy/releases")
-          release_version=$(echo "$releases" | jq -r '.[].tag_name' | sort -rV | head -n 1 | sed 's/^v//')
-          formatted_version="release-$release_version"
-          echo "Latest release version: $formatted_version"
-          echo "release_version=$formatted_version" >> $GITHUB_ENV
+          $releases = Invoke-WebRequest -Uri "https://api.github.com/repos/rashik1144/test-copy/releases" | ConvertFrom-Json
+          $release_version = ($releases | ForEach-Object { $_.tag_name }) | Sort-Object -Descending | Select-Object -First 1 -ExpandProperty TrimStart 'v'
+          $formatted_version = "release-$release_version"
+          Write-Output "Latest release version: $formatted_version"
+          echo "release_version=$formatted_version" >> $env:GITHUB_ENV
+
         
       - name: Check if web server is running
         run: |
