--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -32,15 +32,17 @@ jobs:
           echo "release_version=$formatted_version" >> $env:GITHUB_ENV
 
         
-      - name: Check if web server is running
+      - name: Check server status
+        id: check-server-status
         run: |
-          server_status=$(wget --spider -S http://localhost:8082 2>&1 | grep "HTTP/" | awk '{print $2}')
-          if [[ "$server_status" == "200" ]]; then
-            echo "Web server is running"
-          else
-            echo "Web server is not running"
+          $server_status = (Invoke-WebRequest -Uri "http://localhost:8082" -Method Head -UseBasicParsing).StatusCode
+          if ($server_status -eq 200) {
+            Write-Output "Web server is running"
+          } else {
+            Write-Output "Web server is not running"
             exit 1
-          fi
+          }
+
 
       - name: Generate SBOM and store it
         run: |
