--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Analyze Docker image with Anchore
         run: |
           docker pull anchore/anchore-engine-cli:v1.3.3
-          docker run --rm -v C:/Users/rashi:/workspace anchore/anchore-engine-cli:v1.3.3 anchore-cli image add docker://dotcms:latest
-          docker run --rm -v C:/Users/rashi:/workspace anchore/anchore-engine-cli:v1.3.3 anchore-cli image vuln dotcms:latest os > C:/Users/rashi/sbom.spdx
+          docker run --rm -v C:/Users/rashi:/workspace anchore/engine-cli:v0.9.4 anchore-cli image add docker://dotcms:latest
+          docker run --rm -v C:/Users/rashi:/workspace anchore/engine-cli:v0.9.4 anchore-cli image vuln dotcms:latest os > C:/Users/rashi/sbom.spdx
         shell: powershell
 
 
