--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Analyze Docker image with Anchore
         run: |
-          docker pull anchore/anchore-engine-cli:v1.3.3
+          docker pull anchore/engine-cli:v0.9.4
           docker run --rm -v C:/Users/rashi:/workspace anchore/engine-cli:v0.9.4 anchore-cli image add docker://dotcms:latest
           docker run --rm -v C:/Users/rashi:/workspace anchore/engine-cli:v0.9.4 anchore-cli image vuln dotcms:latest os > C:/Users/rashi/sbom.spdx
         shell: powershell
