--- a/.github/actions/maven-job/action.yml
+++ b/.github/actions/maven-job/action.yml
@@ -291,7 +291,7 @@ runs:
     - id: create-test-reports-artifact
       name: Create Test Reports Artifact
       uses: actions/upload-artifact@v4
-      if: ${{ inputs.generates-test-results == 'true' }}
+      if: always() && inputs.generates-test-results == 'true'
       with:
         name: "build-reports-test-${{ inputs.stage-name }}"
         path: |
