finish tests for withEditorToolbar

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5735,7 +5735,7 @@ editpage.file.uploading=Uploading {0}
 editpage.file.publishing=Publishing {0}
 
 editpage.locked-by=<b>Locked </b> by {0}
-editpage.locked-contact-with=<b>Locked.</b>. Contact with {0} user
+editpage.locked-contact-with=<b>Locked.</b> Contact with {0} user
 
 binary-field.settings.allow.type=Allowed File Type
 binary-field.settings.system.options.allow.url.import=Allow users to create a file by <strong>importing from URL</strong>
