feat(edit-content) empty and error placeholder #29185

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5759,5 +5759,10 @@ edit.content.category-field.list.show.less=Less
 edit.content.category-field.search.name=Name
 edit.content.category-field.search.assignee=Category Path
 edit.content.category-field.search.input.placeholder=Search
+edit.content.category-field.search.not-found.title=No categories found
+edit.content.category-field.search.not-found.legend=Your search does not match any of the categories, please try again.
+edit.content.category-field.search.error.title=Something went wrong
+edit.content.category-field.search.error.legend=Oops! Something went wrong. Please try again later.
 edit.content.category-field.category.root-name=Root
+
 
