--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -69,8 +69,14 @@ jobs:
           
       - name: Switch to release branch
         run: |
-          branch_name="${{ env.release_version }}"
-          git fetch origin "$branch_name" && git checkout "$branch_name" || git checkout -b "$branch_name"
+          $branch_name="${env:release_version}"
+          git fetch origin $branch_name
+          if ($?) {
+            git checkout $branch_name
+          } else {
+            git checkout -b $branch_name
+          }
+        shell: powershell
         working-directory: C:\Users\rashi\core-test-results
 
       - name: Add files and commit changes
