--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,14 @@ testem.log
 karma_html/
 dotsecure
 
+# Yarn
+/core-web/.yarn/*
+!/core-web/.yarn/cache
+!/core-web/.yarn/releases
+!/core-web/.yarn/plugins
+!/core-web/.yarn/sdks
+!/core-web/.yarn/versions
+
 # e2e
 /core-web/e2e/*.js
 /core-web/e2e/*.map
