--- a/core-web/package.json
+++ b/core-web/package.json
@@ -47,7 +47,6 @@
         "workspace-generator": "nx workspace-generator",
         "help": "nx help"
     },
-    "private": false,
     "dependencies": {
         "@angular-devkit/core": "17.3.8",
         "@angular/animations": "17.3.9",
@@ -275,5 +274,6 @@
     },
     "nx": {
         "includedScripts": []
-    }
+    },
+    "packageManager": "yarn@4.3.1"
 }
