--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,8 @@ dotsecure
 
 # Yarn
 /core-web/.yarn/*
+/core-web/.pnp.*
+/core-web/.pnp**
 !/core-web/.yarn/cache
 !/core-web/.yarn/releases
 !/core-web/.yarn/plugins
