--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -1341,6 +1341,11 @@ edit.ema.page.dropzone.one.max.contentlet=Only <strong>1</strong> item can be st
 edit.ema.page.executing.workflow.action=Executing workflow action...
 edit.ema.page.error.executing.workflow.action=Unable to execute workflow action
 edit.ema.page.no.workflow.action=No Workflow Actions
+edit.ema.empty.palette=No contentlets available
+edit.ema.page.unlock=Page Unlock
+edit.ema.page.is.being.unlocked=Page is being unlocked
+edit.ema.page.unlock.success=Page is unlocked
+edit.ema.page.unlock.error=Page could not be unlocked
 editpage.action.cancel=Cancel
 editpage.action.delete=Delete
 editpage.action.save=Save
@@ -5730,7 +5735,7 @@ editpage.file.uploading=Uploading {0}
 editpage.file.publishing=Publishing {0}
 
 editpage.locked-by=<b>Locked </b> by {0}
-editpage.locked-contact-with=<b>Locked.</b>. Contact with {0} user
+editpage.locked-contact-with=<b>Locked.</b> Contact with {0} user
 
 binary-field.settings.allow.type=Allowed File Type
 binary-field.settings.system.options.allow.url.import=Allow users to create a file by <strong>importing from URL</strong>
