--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: rashik1144/core-test-results
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SECRET_PENTEST_TOKEN }}
           path: core-test-results
 
       - name: Pull and run dotCMS Docker image
@@ -36,4 +36,4 @@ jobs:
           git commit -m "Add SBOM for dotCMS latest release"
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SECRET_PENTEST_TOKEN }}
