--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -20,15 +20,19 @@ jobs:
           docker pull dotcms/dotcms:latest
           docker run -d -p 8082:8082 dotcms/dotcms:latest
 
-      - name: Install Syft
+      - name: Install pipx
         run: |
           pip install pipx
-          pipx install syft
 
       - name: Scan Docker Image with Syft
         run: |
           pipx run anchore_syft  dotcms/dotcms:latest -o cyclonedx-xml > core-test-results/cyclonedx.json
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "rashik1144@github.com"
+          git config --global user.name "rashik1144"
+      
       - name: Commit and push results to core-test-results repository
         run: |
           cd core-test-results
