--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           pipx run anchore_syft dotcms/dotcms:${{ env.DOTCMS_VERSION }} -o cyclonedx-xml > core-test-results/cyclonedx.json
 
+      - name: Rename SBOM file with dotCMS version
+        run: |
+          mv core-test-results/cyclonedx.json core-test-results/${{ env.DOTCMS_VERSION }}.json
+
       - name: Configure Git
         run: |
           git config --global user.email "rashik1144@github.com"
@@ -45,7 +49,7 @@ jobs:
         run: |
           cd core-test-results
           ls -l  # Debugging: List files in the core-test-results directory
-          git add cyclonedx.json
+          git add ${{ env.DOTCMS_VERSION }}.json
           git commit -m "Add SBOM for dotCMS version ${{ env.DOTCMS_VERSION }}" || echo "No changes to commit"
           git push origin master  # Update branch name if necessary
         env:
