--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Rename SBOM file with dotCMS version
         run: |
-          mv core-test-results/cyclonedx.json core-test-results/dotcms-${{ env.DOTCMS_VERSION }}.json
+          mv core-test-results/cyclonedx.json core-test-results/${{ env.DOTCMS_VERSION }}.json
 
       - name: Configure Git
         run: |
@@ -64,7 +64,7 @@ jobs:
         run: |
           cd core-test-results
           ls -l  # Debugging: List files in the core-test-results directory
-          git add ${{ env.DOTCMS_VERSION }}.json
+          git add dotcms-${{ env.DOTCMS_VERSION }}.json
           git commit -m "Add SBOM for dotCMS version ${{ env.DOTCMS_VERSION }}" || echo "No changes to commit"
           git push origin master  # Update branch name if necessary
         env:
