#29337 adding sdkman filter.

--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -22,9 +22,13 @@ frontend: &frontend
 cli: &cli
   - 'tools/dotcms-cli/**'
 
+sdkman: &sdkman
+  -  '.sdkmanrc'
+
 jvm_unit_test:
   - *backend
   - *cli
+  - *sdkman
 
 build:
   - *backend
